2011-10-28  Ken Buchanan <kenrb@chromium.org>

        Crash when splitting inline flows with generated floats
        https://bugs.webkit.org/show_bug.cgi?id=70458

        Reviewed by David Hyatt.

        Added test for crash condition when splitting inline flows on an object with generated floats.

        * fast/css-generated-content/inline-splitting-with-after-float-crash.html: Added
        * fast/css-generated-content/inline-splitting-with-after-float-crash-expected.txt: Added

2011-10-28  John Gregg  <johnnyg@google.com>

        Unreviewed gardening.

        * platform/chromium-cg-mac-leopard/fast/css/child-style-can-override-visited-style-expected.png: Added.
        * platform/chromium-cg-mac-leopard/fullscreen/parent-flow-inline-with-block-child-expected.png: Removed.
        * platform/chromium-cg-mac-snowleopard/fullscreen/full-screen-render-inline-expected.png: Removed.
        * platform/chromium-cg-mac-snowleopard/svg/hixie: Added.
        * platform/chromium-cg-mac-snowleopard/svg/hixie/perf: Added.
        * platform/chromium-cg-mac-snowleopard/svg/hixie/perf/002-expected.png: Added.
        * platform/chromium-cg-mac-snowleopard/tables/mozilla_expected_failures/bugs/bug14007-2-expected.png:
        * platform/chromium-cg-mac/svg/hixie/perf/002-expected.png: Removed.
        * platform/chromium-linux-x86/svg/hixie/perf/002-expected.png:
        * platform/chromium-linux/svg/hixie/perf/002-expected.png:
        * platform/chromium-linux/tables/mozilla_expected_failures/bugs/bug14007-2-expected.png:
        * platform/chromium-linux/tables/mozilla_expected_failures/bugs/bug14007-2-expected.txt:
        * platform/chromium-mac-snowleopard/fast/backgrounds/background-leakage-expected.png:
        * platform/chromium-mac-snowleopard/fast/backgrounds/background-leakage-transforms-expected.png:
        * platform/chromium-mac-snowleopard/fast/borders/borderRadiusDashed06-expected.png: